fix tooltip z-index

--- a/code/style.css
+++ b/code/style.css
@@ -70,6 +70,7 @@ table th:nth-child(2) {
     border-radius: 8px;
     pointer-events: none;
     opacity: 0;
+    z-index: 2;
 }
 
 
@@ -144,6 +145,7 @@ h5 {
     border-radius: 8px;
     pointer-events: none;
     opacity: 0;
+    z-index: 2;
 }
 
 .skill-tooltip div strong, .rune-tooltip div strong {
